--- a/OxfordUtilities/OxfordUtilities.csproj
+++ b/OxfordUtilities/OxfordUtilities.csproj
@@ -49,7 +49,9 @@
     <Compile Include="TextToEntitiesAndIntent.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LICENSE" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
