Update to reference cognitive services APIs, to refactor LUIS result since it's changed substantially.

--- a/OxfordUtilities/OxfordUtilities.csproj
+++ b/OxfordUtilities/OxfordUtilities.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ImageToText.cs" />
     <Compile Include="ImageUtilities.cs" />
+    <Compile Include="LUISResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextToEntitiesAndIntent.cs" />
   </ItemGroup>
